--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ button::before {
 .activites {
     max-width: 1440px;
     margin: auto;
-    padding: 0px 50px 0px 50px;
+
 }
 
 .activites h2 {
@@ -445,7 +445,7 @@ button::before {
 }
   
 .activites-card h3 {
-    width: 100%;
+    width: 90%;
     background-color: #fff;
     color: #000;
     margin: 0;
@@ -457,6 +457,17 @@ button::before {
     object-fit: cover;
     width: 100%;
     height: 390px;
+}
+
+.activite2 img {
+    object-fit: cover;
+    width: 100%;
+    height: 390px;
+}
+
+.activite2 h3 {
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 /****** Footer ******/
@@ -536,10 +547,184 @@ footer ul > li a:hover {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
-
+    
+    .activites-card img {
+        height: 200px;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-    /* ... */
+@media (max-width: 768px) {
+    .main-container {
+        padding: 0;
+    }
+    
+    .header-nav {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .header-nav ul {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .header-container img {
+        padding: 30px 30px 0px 30px;
+    }
+    
+    .header-container a {
+        display: flex;
+        justify-content: center;
+    }
+    
+    header .header-container {
+        flex-direction: column;
+    }
+    
+    .header-nav-list li {
+        text-decoration: none;
+        border-top: none;
+        border-bottom: solid 2px var(--main-bg-color);
+        color: #000;
+        width: 50%;
+        padding-bottom: 20px;
+    }
+    
+    .header-nav-list li a {
+        text-decoration: none;
+        color: black;
+        display: inline-block;
+    }
+    
+    .header-nav li a:hover {
+        text-decoration: none;
+        color: var(--main-color);
+        display: inline-block;
+    }
+    
+    .header-nav li:hover {
+        color: var(--blue);
+        border-top: none;
+        border-bottom: solid 2px var(--main-color);
+    }
+
+    form {
+        justify-content: center;
+    }
+
+    button {
+        font-family: 'FontAwesome';
+        width: 50px;
+        height: 50px;
+        border-radius: 15px;
+        box-shadow: 0px 4px 4px 0px #00000040;
+    }
+    
+    button::before {
+        content: "\f002";
+    }
+
+    input {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .filter_container{
+     margin-bottom: 5px;    
+    }
+   
+    .filter_container h2 {
+        width: 100%;
+    }
+    
+    .filter{
+        margin-right: 10px;
+        width: 45%;
+    }
+
+    .info {
+        margin-bottom: 10px;
+    }
+    
+    .hebergements-and-populaires section {
+        width: 100%;
+        border-radius: 0px;
+    }
+    
+    .populaires {
+        margin-top: 0px;
+        border-radius: 0px;
+    }
+    
+    .populaires-cards {
+        flex-direction: column;
+    }
+
+    .populaires-cards .card {
+        margin-top: 15px;
+    }
+
+    .populaires-cards a {
+        width: 100%;
+    }
+
+    .hebergements-and-populaires .hebergements {
+        background-color: white;
+    }
+
+    .grid-hebergements {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "card1"
+        "card2"
+        "card3"
+        "card4"
+        "card5"
+        "card6";
+    }
+
+    .hebergements {
+        order: 2;
+    }
+    
+    .activites {
+        margin-bottom: 50px;
+    }
+
+    .activites-container {
+        flex-direction: column;
+    }
+
+    .activites-card-container {
+        width: 90%;
+        padding: 0px;
+    }
+
+    .activites .activites-container {
+        display: flex;
+        align-items: center;
+    }
+
+    footer {
+        width: 100%;
+        padding: 0px;
+    }
+
+    footer article {
+        width: 100%;
+        padding-left: 20px;
+    }
+
+    footer ul > li a {
+        padding-bottom: 5px;
+    }
+
+
 }
+
+
+
+
+
+
