--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,8 @@ header .header-container {
 
 .header-container img {
     padding: 30px 50px 30px 0px;
+    width: 60px;
+    height: 20px;
 }
 
 .header-nav a {
